# cozy_enedis

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
app/: configuration.py  main.py
app/api/controllers/: clients.py  documents.py
app/api/dtos/: security.py
app/api/middlewares/: security.py  token.py
app/core/exceptions/: exceptions.py
app/core/models/: client.py  doctype.py  document.py  token.py
app/core/ports/: authenticator.py  client_repository.py  cozy_client.py  jwt_provider.py  uuid_provider.py
app/core/usecases/: authorize_client.py  create_client.py  delete_client.py  find_all_clients.py  get_documents.py
app/providers/: dependencies.py
app/providers/persistance/: database.py
app/providers/persistance/entities/: client.py
app/providers/persistance/repositories/: client_repository.py
app/providers/services/: authenticator.py  cozy.py  files_service.py  jwt.py  keycloak.py  uuid.py
app/templates/: base.html
app/templates/cozy_client/: register.html
docker/caddy/: Caddyfile
docker/postgres/: schema.sql
